<resources>
    <string name="app_name">TaskPlanner</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="login_button">Войти</string>
    <string name="login_title">Вход</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="not_registered">Ещё не зарегистрированы?</string>
</resources>